# localstack-ext

./: MANIFEST.in  PKG-INFO  pyproject.toml  setup.cfg
localstack_ext/: __init__.py  config.py  constants.py  plugins.py  providers.py
localstack_ext/analytics/: aws_request_logger.py.enc
localstack_ext/bootstrap/: auth.py  decryption.py  email_utils.py  ftp_server.py  install.py  licensing.py  local_daemon.py  pods_client.py  smtplib_patched.py  state_utils.py  tcp_proxy.py
localstack_ext/cli/: cli_help.py  click_utils.py  cloud_pods.py  cloud_pods_pretty.py  extensions.py  localstack.py
localstack_ext/extensions/: bootstrap.py.enc  manager.py.enc  platform.py.enc  plugins.py  resource.py.enc
localstack_ext/persistence/: handlers.py.enc  metamodel_mappings.py.enc  plugins.py  pods_api.py.enc  state_metamodel.py.enc  utils.py.enc
localstack_ext/persistence/merge_utils/: merge_utils.py.enc  state_merge.py.enc  state_merge_ddb.py.enc  state_merge_kinesis.py.enc
localstack_ext/services/: base.py.enc  dns_server.py.enc  edge.py.enc
localstack_ext/services/acm/: provider.py.enc
localstack_ext/services/amplify/: models.py.enc  provider.py.enc  utils.py.enc
localstack_ext/services/apigateway/: apigateway_extended.py.enc  apigateway_utils.py.enc  authorizers.py.enc  integrations.py.enc  models.py.enc  provider_mgmtapi.py.enc  provider_v2.py.enc  restore.py.enc  router_asf.py.enc
localstack_ext/services/appconfig/: models.py.enc  provider.py.enc
localstack_ext/services/applicationautoscaling/: models.py.enc  provider.py.enc
localstack_ext/services/appsync/: authorizers.py.enc  graphql_executor.py.enc  models.py.enc  provider.py.enc  resolvers.py.enc  velocity_functions.py.enc
localstack_ext/services/athena/: models.py.enc  provider.py.enc  query_utils.py.enc
localstack_ext/services/autoscaling/: provider.py.enc
localstack_ext/services/awslambda/: lambda_daemon.py.enc  lambda_extended.py.enc  lambda_launcher.py.enc  persistence.py
localstack_ext/services/azure/: api_handlers.py.enc  api_specs.py.enc  azure_starter.py.enc  azure_utils.py.enc  crud_handler.py.enc  packages.py  plugins.py  routing.py.enc
localstack_ext/services/backup/: core.py.enc  models.py.enc  provider.py.enc
localstack_ext/services/batch/: provider.py.enc
localstack_ext/services/cloudformation/: cloudformation_extended.py.enc  service_models.py.enc
localstack_ext/services/cloudfront/: models.py.enc  provider.py.enc
localstack_ext/services/cloudtrail/: models.py.enc  provider.py.enc
localstack_ext/services/cloudwatch/: provider.py.enc
localstack_ext/services/codecommit/: models.py.enc  provider.py.enc  repository.py.enc
localstack_ext/services/cognito_identity/: models.py.enc  provider.py.enc
localstack_ext/services/cognito_idp/: cognito_triggers.py.enc  cognito_utils.py.enc  models.py.enc  provider.py.enc  signin_form.py.enc
localstack_ext/services/costexplorer/: models.py.enc  provider.py.enc
localstack_ext/services/docdb/: docdb_api.py.enc
localstack_ext/services/dynamodb/: persistence.py  provider.py.enc
localstack_ext/services/dynamodbstreams/: provider.py.enc
localstack_ext/services/ec2/: provider.py.enc
localstack_ext/services/ecr/: models.py.enc  packages.py  plugins.py  provider.py.enc  registry.py.enc
localstack_ext/services/ecs/: provider.py.enc
localstack_ext/services/efs/: models.py.enc  provider.py.enc
localstack_ext/services/eks/: k8s_utils.py.enc  models.py.enc  packages.py  plugins.py  provider.py.enc
localstack_ext/services/elasticache/: models.py.enc  packages.py  plugins.py  provider.py.enc  redis.py.enc
localstack_ext/services/elasticbeanstalk/: models.py.enc  provider.py.enc
localstack_ext/services/elb/: provider.py.enc  routing.py.enc
localstack_ext/services/elbv2/: provider.py.enc
localstack_ext/services/emr/: models.py.enc  provider.py.enc
localstack_ext/services/events/: provider.py.enc
localstack_ext/services/fis/: actions.py.enc  handler.py.enc  models.py.enc  provider.py.enc  (+1 more)
localstack_ext/utils/: cdk_utils.py.enc  cloud_pods.py.enc  common.py.enc  crypto.py.enc  csvquerytool.py.enc  hadoop.py.enc  persistence.py  postgresql.py.enc  serving.py.enc  websockets.py.enc
(+189 files in other folders)
