# LocalStack-Ext project configuration
[build-system]
requires = ['setuptools', 'wheel', 'plux>=1.3.1']
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 100
include = '(localstack_ext/.*\.py$|tests/.*\.py$)'
extend_exclude = '(.venv|node_modules|tests/integration/azure/functions)'

[tool.isort]
profile = 'black'
line_length = 100

# call using pflake8
[tool.flake8]
max-line-length = 110
ignore = 'E203,E266,E501,W503,F403'
select = 'B,C,E,F,I,W,T4,B9'
exclude = './setup.py,node_modules,.venv*,dist,fixes,localstack_ext/node_modules,venv,build,./tests/integration/azure/functions,.eggs'

[tool.coverage.run]
relative_files = true
source = [
    "localstack_ext",
    "localstack"
]
omit = [
    "*/localstack/aws/api/*",
    "*/localstack_ext/aws/api/*",
]
[tool.pytest.ini_options]
markers = [
    "aws_parity: test can be run standalone against AWS and has been validated before",
]
log_cli = true
log_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)5s --- [%(threadName)12s] %(name)-26s : %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
