[metadata]
name = localstack-ext
version = attr: localstack_ext.__version__
url = https://github.com/localstack/localstack
author = LocalStack Team
author_email = info@localstack.cloud
description = Extensions for LocalStack
license = Proprietary
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	License :: Other/Proprietary License
	Topic :: Software Development :: Testing

[options]
zip_safe = False
packages = find:
install_requires =
	dill==0.3.2
	dnslib>=0.9.10
	dnspython>=1.16.0
	plux>=1.3.1
	localstack>=1.3.0.dev
	pyaes>=1.6.0
	python-jose[cryptography]>=3.1.0,<4.0.0
	requests>=2.20.0
	tabulate
	windows-curses;platform_system=='Windows'

[options.packages.find]
exclude =
	tests*

[options.package_data]
* = *.md
localstack_ext =
	**/*.py.enc
	services/**/*.json
	services/**/*.yml

[options.extras_require]
runtime =
	avro>=1.11.0
	amazon.ion>=0.9.3
	aws-encryption-sdk>=3.1.0
	dirtyjson==1.0.7
	docker-registry-client>=0.5.2
	docker @ git+https://github.com/tuttinator/docker-py@release-v5.0.3#egg=docker>=5.0.0,<6.0.0
	dulwich>=0.19.16
	flask>=1.0.2
	graphql-core>=3.0.3
	janus>=0.5.0
	jsonpatch>=1.32
	Js2Py>=0.71
	kafka-python
	kubernetes==21.7.0
	localstack[runtime]>=1.3.0.dev
	moto-ext[all]>=4.0.10.post1
	paho-mqtt>=1.5
	parse==1.19.0
	parquet>=1.3.1
	pg8000>=1.10
	postgres>=2.2.2
	postgresql-proxy>=0.1.0
	presto-python-client>=0.7.0
	pyftpdlib>=1.5.6
	# pyhive[hive]>=0.6.1
	pyion2json>=0.0.2
	PyJWT>=1.7.0
	pyqldb~=3.2
	python-snappy>=0.6
	readerwriterlock>=1.0.7
	rsa>=4.0
	sql-metadata>=2.6.0
	srp-ext==1.0.7.1
	testing.common.database>=1.1.0
	tornado>=6.0
	warrant-ext>=0.6.2
	websockets>=8.1
	Whoosh>=2.7.4
test =
	aiohttp
	appdirs  # TODO - should get pulled in by "black", but currently getting ModuleNotFoundError on "from appdirs import user_cache_dir" in CI
	aws_xray_sdk>=2.4.2
	azure-common>=1.1.26
	azure-core>=1.9.0
	azure-devops>=6.0.0b4
	azure-functions>=1.5.0
	azure-identity>=1.5.0
	azure-mgmt-core>=1.2.2
	azure-mgmt-storage>=16.0.0
	azure-mgmt-web>=1.0.0
	azure-servicebus>=7.0.1
	azure-storage-blob>=12.3.0
	azure-storage-queue>=12.1.1
	black==22.3.0
	coverage[toml]>=5.0.0
	coveralls
	flake8-black==0.3.2
	flake8-isort==5.0.0
	flake8-quotes>=0.11.0
	flake8==3.9.2
	gremlinpython==3.5.1  # 3.5.2 currently breaking our NeptuneDB tests
	isort==5.9.1
	Js2Py>=0.71
	jws>=0.1.3
	localstack[test]>=1.3.0.dev
	msal
	msal-extensions
	msrest
	neo4j
	nest-asyncio>=1.4.1
	paramiko~=2.11.0
	portalocker
	pre-commit==2.13.0
	pyarrow  # writing parquet test files
	pyathena
	pykafka  # TODO: consider replacing with "kafka-python"
	pymongo
	pymssql
	pymysql
	pyproject-flake8==3.9.2 # enables flake8 config through pyproject.toml
	pytest-dependency==0.5.1
	pytest-httpserver>=1.0.1
	pytest-instafail>=0.4.2
	pytest-rerunfailures==10.0
	pytest==6.2.4
	redis==3.3.7
	redshift_connector
	stomp.py==8.0.1
test_overrides =
	localstack>=1.3.0.dev1
package =
	python-minifier

[egg_info]
tag_build =
tag_date = 0

